# GPR-HAT-barrier-prediction

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  local.env
MGK_GPR/: create_K.py  graph_helpers.py  mpi_helpers.py  optimize_kernel_parameters.py  submit_calculate_K.sh  visualise_graph_creation.ipynb
PaiNN/barrier_gnn/: README.md  requirements.txt  setup.cfg
PaiNN/barrier_gnn/src/barriernn/: __init__.py  input_generation.py  train.py  train_hpara.py  utils.py
PaiNN/usage/: LICENSE.txt  data_efficiency.py  helpers.py  submit_data_efficiency.sh  submit_two_stage_learning.sh  two_stage_learning.py
SOAP_GPR/: MAIN_RUN.py  SOAP_GPR.py  submit_SOAP_GPR.sh
analyse_and_plot/: analyse_GPR_and_PaiNN_results.py  barrier_rmse_std.py  data_efficiency_SOAP_PaiNN.py  pit_and_proper_scores.py  plot_coverage.py  plot_spread_vs_residuals.py  plot_traj_predictions.py  plot_two_stage_predictions.py
data/: atoms_to_soap.py  create_soap_distances.sh  helper.py  pdb_to_atoms.py  preprocess_dataset.sh
general/: GPR_helper.py
install/: install.sh
install/main_gpr_env/: environment.yaml  requirements.txt  requirements_jax.txt
install/mgk_gpr_env/: environment.yaml  requirements_jax.txt
install/painn_env/: environment.yaml  requirements.txt
two_stage_learning_PaiNN_SOAP/: SOAP_second_stage.py  collect_painn_predictions.py  submit_SOAP_transfer.sh  submit_collect_painn_predictions.sh
